# Paiagram-oudia

./: .gitignore  Cargo.toml  README.md  compile_pkg  flake.nix
.github/workflows/: ci.yml  deploy-converter-pages.yml
crates/converter/: Cargo.toml  index.html  style.css
crates/converter/src/: main.rs
crates/paiagram-oudia/: Cargo.toml
crates/paiagram-oudia/src/: ast.rs  ir.rs  lib.rs  macros.rs  operation.rs  time.rs  timetable.rs
crates/paiagram-oudia/test/: README.md  obama.oud  sagano.oud  utsube.oud
src/: ir.rs  lib.rs  operation.rs  time.rs  timetable.rs
