[package]
name = "paiagram-oudia"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wensimehrp/paiagram-oudia"

[dependencies]
derive_more = { version = "2.1.1", features = ["full"] }
encoding_rs = "0.8.35"
pest = "2.8.6"
pest_consume = "1.1.3"
pest_derive = "2.8.6"
serde = { version = "1.0.228", optional = true, features = ["derive"] }
smallvec = "1.15.1"
thiserror = "2.0.18"

[features]
serde = ["dep:serde", "smallvec/serde"]
