[package]
name = "converter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
kdl = "6.5.0"
leptos = { version = "0.8.17", features = ["csr"] }
paiagram-oudia = { path = "../paiagram-oudia" }
saphyr = "0.0.6"
serde_json = "1.0.149"
toml = "1.1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
