[package]
name = "converter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
js-sys = "0.3.81"
leptos = { version = "0.8.17", features = ["csr"] }
paiagram-oudia = { path = "../paiagram-oudia", features = ["serde"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
toml = "1.1.0"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = [
  "Blob",
  "Clipboard",
  "DataTransfer",
  "Document",
  "DragEvent",
  "Event",
  "File",
  "FileList",
  "FileReader",
  "HtmlAnchorElement",
  "HtmlElement",
  "HtmlInputElement",
  "Navigator",
  "Url",
  "Window"
] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
